--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio Esportivo</title>
+  <title>Portfolio Esportivo</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
     <a href="#home" class="botao-entrar">ENTRA</a>
   </section>
 
-  <!-- Página principal -->
+  <!-- Pagina principal -->
   <section id="home" class="pagina-principal">
     <header>
-      <h1>Portfólio</h1>
+      <h1>Portfolio</h1>
       <nav class="menu">
         <span>Menu</span>
       </nav>
@@ -24,7 +24,7 @@
 
     <main>
       <div class="descricao">
-        <h2>Descrição</h2>
+        <h2>Descricao</h2>
         <p>Texto descritivo sobre o esporte ou projeto.</p>
       </div>
 
