--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfólio Esportivo</title>
+  <title>Portfolio Esportivo</title>
   <style>
     * {
       margin: 0;
