--- a/index.html
+++ b/index.html
@@ -1,76 +1,60 @@
-<!DOCTYPE html><html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Esportivo</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }body {
-  background-color: #f5f5f5;
-}
+</style>
+</head>
+<body>
+  <!-- Pagina de entrada -->
+  <div class="intro">
+    <img src="logo-esporte.png" alt="Logo do Esporte">
+    <button onclick="document.querySelector('.main').scrollIntoView({behavior: 'smooth'})">ENTRA</button>
+  </div>  <!-- Pagina principal -->  <div class="main">
+    <header>
+      <div class="logo">Portifolio Esportivo</div>
+    </header><nav>
+  Atletismo | Natacao | Basquete
+</nav>
 
-header, nav, footer {
-  background-color: #333;
-  color: white;
-  padding: 10px;
-  text-align: center;
-}
+<div class="container">
+  <!-- Secao Atletismo -->
+  <div class="section" id="atletismo">
+    <h2>Atletismo</h2>
+    <img src="atletismo.jpg" alt="Imagem de Atletismo">
+    <p>O atletismo e uma das mais antigas praticas esportivas e inclui provas de corrida, salto e arremesso.</p>
+    <div class="cards">
+      <div class="card">Corrida de 100m</div>
+      <div class="card">Salto em distancia</div>
+      <div class="card">Arremesso de peso</div>
+    </div>
+  </div>
 
-.logo {
-  font-size: 1.5rem;
-}
+  <!-- Secao Natacao -->
+  <div class="section" id="natacao">
+    <h2>Natacao</h2>
+    <img src="natacao.jpg" alt="Imagem de Natacao">
+    <p>A natacao e um esporte completo que trabalha o corpo todo e tem varias modalidades como crawl, peito e borboleta.</p>
+    <div class="cards">
+      <div class="card">50m livre</div>
+      <div class="card">100m peito</div>
+      <div class="card">200m borboleta</div>
+    </div>
+  </div>
 
-.intro {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  flex-direction: column;
-  background-color: #e0e0e0;
-}
+  <!-- Secao Basquete -->
+  <div class="section" id="basquete">
+    <h2>Basquete</h2>
+    <img src="basquete.jpg" alt="Imagem de Basquete">
+    <p>O basquete e um esporte coletivo jogado por duas equipes com o objetivo de acertar a bola no cesto adversario.</p>
+    <div class="cards">
+      <div class="card">Arremessos</div>
+      <div class="card">Dribles</div>
+      <div class="card">Defesa em zona</div>
+    </div>
+  </div>
+</div>
 
-.intro img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 50%;
-}
+<footer>
+  Criado por Isabela n 20, Helen n 17, Sofia n 36
+</footer>
 
-.intro button {
-  margin-top: 20px;
-  padding: 10px 30px;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
+  </div>
+</body>
+</html>
 
-.container {
-  padding: 20px;
-}
-
-.section {
-  margin-bottom: 40px;
-}
-
-.section img {
-  width: 100%;
-  max-height: 300px;
-  object-fit: cover;
-  margin-bottom: 10px;
-}
-
-.cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 15px;
-}
-
-.card {
-  background-color: white;
-  padding: 15px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-  text-align: center;
-}
