--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <!-- Pagina de entrada -->
   <div class="intro">
-    <img src="logo-esporte.png" alt="Logo do Esporte">
+    <img src="img/cep.jpg" alt="Logo do Esporte">
     <button onclick="document.querySelector('.main').scrollIntoView({behavior: 'smooth'})">ENTRA</button>
   </div>  <!-- Pagina principal -->  <div class="main">
     <header>
