alterações nas imagens

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <!-- Pagina de entrada -->
   <div class="intro">
-    <img src="img/cep.jpg" alt="Logo do Esporte">
+    <img src="img/logo cep.png" alt="Logo do Esporte Do CEP">
     <button onclick="document.querySelector('.main').scrollIntoView({behavior: 'smooth'})">ENTRA</button>
   </div>  <!-- Pagina principal -->  <div class="main">
     <header>
@@ -16,7 +16,7 @@
   <!-- Secao Atletismo -->
   <div class="section" id="atletismo">
     <h2>Atletismo</h2>
-    <img src="atletismo.jpg" alt="Imagem de Atletismo">
+    <img src="img/atletismo.jpg" alt="Imagem de Atletismo">
     <p>O atletismo e uma das mais antigas praticas esportivas e inclui provas de corrida, salto e arremesso.</p>
     <div class="cards">
       <div class="card">Corrida de 100m</div>
@@ -28,7 +28,7 @@
   <!-- Secao Natacao -->
   <div class="section" id="natacao">
     <h2>Natacao</h2>
-    <img src="natacao.jpg" alt="Imagem de Natacao">
+    <img src="img/natacao.png" alt="Imagem de Natacao">
     <p>A natacao e um esporte completo que trabalha o corpo todo e tem varias modalidades como crawl, peito e borboleta.</p>
     <div class="cards">
       <div class="card">50m livre</div>
@@ -40,7 +40,7 @@
   <!-- Secao Basquete -->
   <div class="section" id="basquete">
     <h2>Basquete</h2>
-    <img src="basquete.jpg" alt="Imagem de Basquete">
+    <img src="img/basquete.webp" alt="Imagem de Basquete">
     <p>O basquete e um esporte coletivo jogado por duas equipes com o objetivo de acertar a bola no cesto adversario.</p>
     <div class="cards">
       <div class="card">Arremessos</div>
