--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio de Esportes</title>
+  <title>Portifolio de Esportes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,15 +11,14 @@
 
 <!-- Pagina de entrada -->
 <section class="vh-100 d-flex flex-column justify-content-center align-items-center bg-primary text-white">
-  <img src="img/logo-cep.png" alt="Logo do Esporte Do CEP" class="img-fluid mb-4" style="max-width: 200px;">
+  <img src="img/logo cep.png" alt="Logo do Esporte Do CEP" class="img-fluid mb-4" style="max-width: 200px;">
   <button class="btn btn-light" onclick="document.querySelector('.main').scrollIntoView({behavior: 'smooth'})">ENTRA</button>
 </section>
 
 <!-- Pagina principal -->
 <div class="main container py-5">
   <header class="text-center mb-5">
-    <h1 class="display-4">Portfolio Esportivo</h1>
-    <p class="lead">Alunas: Isabela n 20, Helen n 17, Sofia n 36</p>
+    <h1 class="display-4">Portifolio Esportivo</h1>
   </header>
 
   <nav class="nav justify-content-center mb-5">
