--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portifolio de Esportes</title>
+  <title>Portifólio de Esportes</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -18,12 +18,12 @@
 <!-- Pagina principal -->
 <div class="main container py-5">
   <header class="text-center mb-5">
-    <h1 class="display-4">Portifolio Esportivo</h1>
+    <h1 class="display-4">Portifólio Esportivo</h1>
   </header>
 
   <nav class="nav justify-content-center mb-5">
     <a class="nav-link" href="#atletismo">Atletismo</a>
-    <a class="nav-link" href="#natacao">Natacao</a>
+    <a class="nav-link" href="#natação">Natação</a>
     <a class="nav-link" href="#basquete">Basquete</a>
   </nav>
 
@@ -32,10 +32,10 @@
     <section id="atletismo" class="col-12">
       <h2 class="text-center mb-4">Atletismo</h2>
       <img src="img/atletismo.jpg" alt="Imagem de Atletismo" class="img-fluid rounded mx-auto d-block mb-3">
-      <p class="text-center">O atletismo e uma das mais antigas praticas esportivas e inclui provas de corrida, salto e arremesso.</p>
+      <p class="text-center">O atletismo é uma das mais antigas praticas esportivas e inclui provas de corrida, salto e arremesso.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">Corrida de 100m</div></div>
-        <div class="col-md-4"><div class="card p-3">Salto em distancia</div></div>
+        <div class="col-md-4"><div class="card p-3">Salto em distância</div></div>
         <div class="col-md-4"><div class="card p-3">Arremesso de peso</div></div>
       </div>
     </section>
