--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       </div>
     </section>
 
-    <!-- Natacao -->
-    <section id="natacao" class="col-12">
-      <h2 class="text-center mb-4">Natacao</h2>
-      <img src="img/natacao.png" alt="Imagem de Natacao" class="img-fluid rounded mx-auto d-block mb-3">
-      <p class="text-center">A natacao e um esporte completo que trabalha o corpo todo e tem varias modalidades como crawl, peito e borboleta.</p>
+    <!-- Natação -->
+    <section id="natação" class="col-12">
+      <h2 class="text-center mb-4">Nataçãoo</h2>
+      <img src="img/natacao.png" alt="Imagem de Nataçãoo" class="img-fluid rounded mx-auto d-block mb-3">
+      <p class="text-center">A natação é um esporte completo que trabalha o corpo todo e têm várias modalidades como crawl, peito e borboleta.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">50m livre</div></div>
         <div class="col-md-4"><div class="card p-3">100m peito</div></div>
@@ -56,7 +56,7 @@
     <section id="basquete" class="col-12">
       <h2 class="text-center mb-4">Basquete</h2>
       <img src="img/basquete.webp" alt="Imagem de Basquete" class="img-fluid rounded mx-auto d-block mb-3">
-      <p class="text-center">O basquete e um esporte coletivo jogado por duas equipes com o objetivo de acertar a bola no cesto adversario.</p>
+      <p class="text-center">O basquete é um esporte coletivo jogado por duas equipes com o objetivo de acertar a bola no cesto adversário.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">Arremessos</div></div>
         <div class="col-md-4"><div class="card p-3">Dribles</div></div>
