arrumando erros nos textos

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
     <!-- Natação -->
     <section id="natação" class="col-12">
-      <h2 class="text-center mb-4">Nataçãoo</h2>
-      <img src="img/natacao.png" alt="Imagem de Nataçãoo" class="img-fluid rounded mx-auto d-block mb-3">
-      <p class="text-center">A natação é um esporte completo que trabalha o corpo todo e têm várias modalidades como crawl, peito e borboleta.</p>
+      <h2 class="text-center mb-4">Natação</h2>
+      <img src="img/natacao.png" alt="Imagem de Natação" class="img-fluid rounded mx-auto d-block mb-3">
+      <p class="text-center">A natação é um esporte completo que trabalha o corpo todo e têm várias modalidades como crawl, peito, borboleta e costas.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">50m livre</div></div>
         <div class="col-md-4"><div class="card p-3">100m peito</div></div>
