--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Natação -->
     <section id="natação" class="col-12">
       <h2 class="text-center mb-4">Natação</h2>
-      <img src="img/natacao.png" alt="Imagem de Natação" class="img-fluid rounded mx-auto d-block mb-3">
+      <img src="img/natacao.png" alt="Imagem de Natação" height="100px"
       <p class="text-center">A natação é um esporte completo que trabalha o corpo todo e têm várias modalidades como crawl, peito, borboleta e costas.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">50m livre</div></div>
