--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="atletismo" class="col-12">
       <h2 class="text-center mb-4">Atletismo</h2>
       <img src="img/atletismo.jpg" alt="Imagem de Atletismo" class="img-fluid rounded mx-auto d-block mb-3">
-      <p class="text-center">O atletismo é uma das mais antigas praticas esportivas e inclui provas de corrida, salto e arremesso. Helen tem 15 anos e pratica atletismo há alguns anos. Ela sente maravilhada quando corre e ama seu esporte!</p>
+      <p class="text-center">O atletismo é uma das mais antigas práticas esportivas e inclui provas de corrida, salto e arremesso. Helen tem 15 anos e pratica atletismo há alguns anos. Ela sente maravilhada quando corre e ama seu esporte! Sua modalidade favorita é a corrida de 100m.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">Corrida de 100m</div></div>
         <div class="col-md-4"><div class="card p-3">Salto em distância</div></div>
@@ -44,7 +44,7 @@
     <section id="natação" class="col-12">
       <h2 class="text-center mb-4">Natação</h2>
       <img src="img/natacao.png" alt="Imagem de Natação" class="img-fluid rounded mx-auto d-block mb-3">"
-      <p class="text-center">A natação é um esporte completo que trabalha o corpo todo e têm várias modalidades como crawl, peito, borboleta e costas. Sofia tem 16 anos e pratica naação desde os 2 anos de idade. Ela sente um mix de emoções quando nada, além do sentimento de liberdade. Sofia ama seu esporte!</p>
+      <p class="text-center">A natação é um esporte completo que trabalha o corpo todo e têm várias modalidades como crawl, peito, borboleta e costas. Sofia tem 16 anos e pratica natação desde os 2 anos de idade. Ela sente um mix de emoções quando nada, além do sentimento de liberdade. Sofia ama seu esporte! Sua modalidade favorita é 50m livre.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">50m livre</div></div>
         <div class="col-md-4"><div class="card p-3">100m peito</div></div>
@@ -56,7 +56,7 @@
     <section id="basquete" class="col-12">
       <h2 class="text-center mb-4">Basquete</h2>
       <img src="img/basquete.webp" alt="Imagem de Basquete" class="img-fluid rounded mx-auto d-block mb-3">
-      <p class="text-center">O basquete é um esporte coletivo jogado por duas equipes com o objetivo de acertar a bola no cesto adversário. Isabela tem 16 anos e pratica basquete faz pouco tempo, mas é muito boa. Isabela ama seu esporte!</p>
+      <p class="text-center">O basquete é um esporte coletivo jogado por duas equipes com o objetivo de acertar a bola no cesto adversário. Isabela tem 16 anos e pratica basquete faz pouco tempo, mas é muito boa. Isabela ama seu esporte! Sua modalidade favorita é a defesa de zona.</p>
       <div class="row text-center">
         <div class="col-md-4"><div class="card p-3">Arremessos</div></div>
         <div class="col-md-4"><div class="card p-3">Dribles</div></div>
