--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- Pagina principal -->
 <div class="main container py-5">
   <header class="text-center mb-5">
-    <h1 class="display-4">Portifólio Esportivo</h1>
+    <h1 class="display-4">Portfólio Esportivo</h1>
   </header>
 
   <nav class="nav justify-content-center mb-5">
